workspace-sf/force-app/main/default/objects/ContaRelacionada__c/ContaRelacionada__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as contas relacionadas a uma outra conta.</description>
    <label>Conta relacionada</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da conta relacionada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contas relacionadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>