workspace-sf/force-app/main/default/objects/ContaRelacionada__c/fields/ContaRelacionada__c.field-meta.xml
<CustomField>
    <fullName>ContaRelacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas relacionadas (Conta relacionada)</relationshipLabel>
    <relationshipName>Contas_Relacionadas</relationshipName>
    <type>Lookup</type>
</CustomField>