workspace-sf/force-app/main/default/objects/ContaRelacionada__c/fields/TipoRelacionamento__c.field-meta.xml
<CustomField>
    <fullName>TipoRelacionamento__c</fullName>
    <label>Tipo de relacionamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsável financeiro</fullName>
            </value>
            <value>
                <fullName>Companheiro(a)</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Enteado(a)</fullName>
            </value>
            <value>
                <fullName>Filho(a)</fullName>
            </value>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Pai</fullName>
            </value>
            <value>
                <fullName>Sócio(a)</fullName>
            </value>
            <value>
                <fullName>Funcionário(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>